--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,23 @@
 name: Generate Datas
+
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule: # Runs every 12 hours at 0 minutes past the hour (00:00 UTC, 12:00 UTC)
+    - cron: "0 */12 * * *"
   workflow_dispatch:
+
 jobs:
   build:
     name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      # Snake Animation
+      # Generate Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-with:
-          github_user_name: JagdeepSingh13
+        with:
+          github_user_name: thepiyushmalhotra
           svg_out_path: dist/github-contribution-grid-snake.svg
+
+      # Deploy to GitHub Pages
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
