--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: thepiyushmalhotra
+          github_user_name: JagdeepSingh13
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       # Deploy to GitHub Pages
