--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,16 +1,20 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 12 hours
+  schedule:
     - cron: "0 */12 * * *"
   workflow_dispatch:
+
+permissions:
+  contents: write  # ✅ allow actions to push to the repo
 
 jobs:
   build:
     name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      # Snake Animation
+      - uses: actions/checkout@v4
+
       - uses: Platane/snk@master
         id: snake-gif
         with:
